--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ aiohttp==3.9.1
 sqlalchemy[asyncio]==2.0.25
 asyncpg==0.29.0
 alembic==1.13.1
+aiosqlite==0.19.0
 
 # Security
 cryptography==41.0.7
